<?php

namespace App\Models\pkg_creation_projets;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class TransfertCompetence extends Model
{
    use HasFactory;
}
