<?php

namespace App\Models\pkg_realisation_projets;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class RealisationProjet extends Model
{
    use HasFactory;
}
